[package]
build = "build.rs"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hotham-simulator"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash = "0.37.0+1.3.209"
ash-window = "0.10.0"
cgmath = "0.18"
env_logger = "0.9.0"
lazy_static = "1.4.0"
openxr-sys = "0.9"
rand = "0.8"
#   use winit from git until other upstream crates have updated to new
#   raw-window-handle that is used by winit 0.27
winit = { git = "https://github.com/rust-windowing/winit", rev = "4c39b3188cee29548761b57f38e4aa046cbe31ea" }

[build-dependencies]
bindgen = "*"
shaderc = "0.7.2"
